--- a/styles.css
+++ b/styles.css
@@ -262,7 +262,7 @@ section {
     gap: 2rem;
     margin-bottom: 2rem;
     margin-top: 2rem;
-    width:400px;
+    width:350px;
     align-items: center;
 }
 
@@ -305,15 +305,66 @@ section {
     border: rgb(60, 60, 60) 0.1rem solid;
     border-color: rgb(160,160,160);
     text-align: center;
-    width: 300px;
+
 }
 
 .text-container {
     width: 40vw;
+    line-height: 1.5;
 }
 
 .section-container {
     gap: 2rem;
     height: 80%;
 
+}
+
+#experience {
+    position: relative;
+}
+
+.experience-sub-title {
+    color:rgb(80, 80, 80);
+    font-weight: 600;
+    font-size: 1.75em;
+    margin-bottom: 2rem;
+}
+
+.experience-details-container {
+    justify-content: center;
+    flex-direction: column;
+    align-items: center;
+    display: flex;
+}
+
+.article-container {
+    display: flex;
+    text-align: initial;
+    flex-wrap: wrap;
+    flex-direction:row;
+    gap: 2.5rem;
+    justify-content: space-around;
+}
+
+article {
+    display: flex;
+    width: 10rem;
+    justify-content: space-around;
+    gap: 0.5rem;
+}
+
+article .icon {
+    cursor: default;
+}
+
+#experience .about-containers{
+    margin-bottom: auto;
+    margin-top: auto;
+    width:auto;
+    align-items: auto;
+    height: 500px;
+}
+
+#experience .details-container {
+    height: 325px;
 }
