--- a/mediaqueries.css
+++ b/mediaqueries.css
@@ -1,8 +1,122 @@
+@media screen and (max-width:1400px) {
+    #profile {
+        height: 83vh;
+        margin-bottom: 6rem; 
+    }
+    #about {
+        display: contents;
+    }
+    .about-containers {
+        flex-wrap: wrap;
+    }
+    #contact,#projects {
+        height:fit-content
+    }
+    .text-container {
+        text-align: justify;
+        width: 80vw;
+    }
+}
+
 @media screen and (max-width:1200px) {
+    #projects {
+        margin-top: 250px;
+    }
     #desktop-nav{
         display:none;
     }
     #hamburger-nav {
         display: flex;
     }
+    #experience, .experience-details-container {
+        margin-top: 2rem;
+    }
+
+    #profile,.section-container {
+        display:block
+    }
+
+    .arrow{
+        display: none;
+    }
+    .section, .section-container {
+        height:fit-content;
+    }
+    section {
+        margin: 0 5%;
+    }
+
+    .section__pic-container {
+        width: 275px;
+        height: 275px;
+        margin: auto 2rem;
+    }
+
+    .about-containers {
+        margin-top: 100px;
+    }
+}
+
+@media screen and (max-width:600px) {
+    #contact,
+    footer {
+        height: 40vh;
+    }
+
+    #profile {
+        height: 83vh;
+        margin-bottom: 0;
+    }
+    article {
+        font-size: 1rem;
+    }
+    footer nav {
+        height:fit-content;
+        margin-bottom: 2rem;
+    }
+
+    .about-containers, .contact-info-upper-container,.btn-container {
+        flex-wrap: wrap;
+    }
+
+    .about-details-container {
+        margin-top: 0px;
+    }
+
+    .contact-info-container {
+        margin: 0;
+    }
+    .contact-info-container p, .nav-links li a {
+        font-size: 1rem;
+    }
+    .experience-sub-title {
+        font-size: 1.25rem;
+    }
+    .logo {
+        font-size: 1.5rem;
+    }
+    .nav-links {
+        flex-direction: column;
+        gap: 0.5rem;
+        text-align: center;
+    }
+
+    .section__pic-container {
+        justify-content: center;
+        margin:auto;
+    }
+
+    .section__text__p2 {
+        width: 1.25rem;
+    }
+
+    .title {
+        font-size: 2rem;
+    }
+
+
+    .section-container {
+        margin-top: 20px;
+    }
+
 }
