--- a/styles.css
+++ b/styles.css
@@ -344,6 +344,7 @@ section {
     flex-direction:row;
     gap: 2.5rem;
     justify-content: space-around;
+
 }
 
 article {
@@ -368,3 +369,68 @@ article .icon {
 #experience .details-container {
     height: 325px;
 }
+
+#projects {
+    position: relative;
+}
+
+.project-img {
+    width: 350px;
+    height: auto;
+    border-radius: 2rem;
+}
+
+.color-container {
+    border-color: rgb(160,160,160);
+    background: white;
+}
+
+.project-title {
+    margin: 1rem;
+    color: black;
+}
+
+.project-btn {
+    color: black;
+    border-color: rgb(160,160,160);
+}
+
+#contact {
+    display:flex;
+    justify-content: center;
+    flex-direction: column;
+    height: 70vh;
+}
+
+.contact-info-upper-container {
+    display:flex;
+    justify-content: center;
+    border-radius: 2rem;
+    border: rgb(60, 60, 60) 0.1rem solid;
+    border-color: rgb(160,160,160);
+    background: white;
+    padding: 0.5rem;
+    margin: 2rem auto;
+}
+
+.contact-info-container {
+    display:flex;
+    align-items: center;
+    justify-content: center;
+    gap: 0.5rem;
+    margin: 1rem;
+}
+
+.contact-info-container p{
+    font-size: larger;
+}
+
+.contact-icon {
+    cursor: default;
+    height: 4rem;
+}
+
+footer {
+    margin: 0 1rem;
+}
+
