--- a/mediaqueries.css
+++ b/mediaqueries.css
@@ -2,6 +2,10 @@
     #projects {
         margin-top: 350px;
     }
+    .projects-container {
+        display: block;
+        margin:0;
+    }
     #profile {
         height: 83vh;
         margin-bottom: 6rem; 
