--- a/styles.css
+++ b/styles.css
@@ -381,7 +381,7 @@ article .icon {
 
 .projects-container {
     display:flex;
-    justify-content: center;
+    justify-content: space-around;
 }
 
 .project-img {
